Fix cropped footer on mobile devices

--- a/res/css/blog.css
+++ b/res/css/blog.css
@@ -42,6 +42,10 @@ footer ul > li {
     margin-right: 12px;
 }
 
+footer > * {
+    background: rgba(39, 174, 96, 1) !important;
+}
+
 a {
     color: rgba(39,174,96,1);
 
